--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,31 +14,36 @@ jobs:
         - my_cache
 
     - run:
+        name: Get ds114_test1_with_freesurfer from OSF
         command: |
-          if [[ ! -d ~/data ]]; then
-            mkdir -p ~/data;
+          mkdir -p ${HOME}/data;
+          if [[ ! -d ${HOME}/data/ds114_test1_with_freesurfer ]]; then
+            wget -c -O ${HOME}/ds114_test1_with_freesurfer.tar.gz "https://osf.io/download/y4q8a/"
+            tar xfz ${HOME}/ds114_test1_with_freesurfer.tar.gz -C ${HOME}/data
+            ls -la
           fi
-
     - run:
+        name: Build Docker image
         command: |
-          if [[ ! -d ~/data/ds114_test1_with_freesurfer ]]; then
-            wget -c -O ~/ds114_test1_with_freesurfer.tar.gz "https://files.osf.io/v1/resources/9q7dv/providers/osfstorage/57e54a106c613b01d9d3ed7d";
+          if [[ -e ${HOME}/docker/image.tar ]]; \
+            then docker load -i ${HOME}/docker/image.tar;
           fi
-    - run: ls -la
-    - run: tar xfz ~/ds114_test1_with_freesurfer.tar.gz -C ~/data
-    - run: if [[ -e ~/docker/image.tar ]]; then docker load -i ~/docker/image.tar; fi
-    - run: git describe --tags --always > version
-    - run:
-        command: docker build -t bids/${CIRCLE_PROJECT_REPONAME,,} .
-        no_output_timeout: 6h
-    - run: mkdir -p ~/docker; docker save "bids/${CIRCLE_PROJECT_REPONAME,,}" > ~/docker/image.tar
-    - run: mkdir -p ${HOME}/outputs
+          git describe --tags --always > version
+          docker build -t bids/${CIRCLE_PROJECT_REPONAME,,} .
+          mkdir -p ${HOME}/docker
+          docker save "bids/${CIRCLE_PROJECT_REPONAME,,}" > ${HOME}/docker/image.tar
 
     - save_cache:
         key: my_cache
         paths:
         - ~/docker
         - ~/data
+
+    - persist_to_workspace:
+        root: /home/circleci
+        paths:
+        - data/ds114_test1_with_freesurfer
+        - docker/image.tar
 
   test:
     machine:
@@ -48,8 +53,11 @@ jobs:
         at: /tmp/workspace
     - run: docker load -i /tmp/workspace/docker/image.tar
     - run:
-        command: docker run -ti --rm --read-only \ -v /tmp:/tmp \ -v /var/tmp:/var/tmp \ -v ${HOME}/data/ds114_test1:/home/jovyan/work/bids_dataset \ -v
-          ${HOME}/outputs1:/home/jovyan/work/bids_dataset/outputs \ bids/${CIRCLE_PROJECT_REPONAME,,} --version
+        command: |
+          docker run -ti --rm --read-only
+            -v /tmp/workspace/data/ds114_test1:/bids_dataset \
+            -v ${HOME}/outputs1:/outputs \
+              bids/${CIRCLE_PROJECT_REPONAME,,} --version
         no_output_timeout: 6h
 
   deploy:
@@ -59,7 +67,7 @@ jobs:
     - attach_workspace:
         at: /tmp/workspace
     - run: docker load -i /tmp/workspace/docker/image.tar
-      # DOCKER_PASS and DOCKER_USER are defined as CircleCI env variables (check circleci project in web form)
+
     - run:
         command: |
           if [[ -n "$DOCKER_PASS" ]]; then
@@ -71,4 +79,16 @@ jobs:
             fi
           fi
 
-# VS Code Extension Version: 1.5.1
+workflows:
+  build-test-deploy:
+    jobs:
+    - build
+    - test:
+        requires:
+        - build
+    - deploy:
+        requires:
+        - test
+        filters:
+          tags:
+            only: /.*/
