--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,12 +52,19 @@ jobs:
     - attach_workspace:
         at: /tmp/workspace
     - run: docker load -i /tmp/workspace/docker/image.tar
+
     - run:
         command: |
           docker run -ti --rm --read-only
-            -v /tmp/workspace/data/ds114_test1:/bids_dataset \
+            -v /tmp/workspace/data/ds114_test1_with_freesurfer:/bids_dataset \
             -v ${HOME}/outputs1:/outputs \
               bids/${CIRCLE_PROJECT_REPONAME,,} --version
+    - run:
+        command: |
+          docker run -ti --rm --read-only
+            -v /tmp/workspace/data/ds114_test1_with_freesurfer:/bids_dataset \
+            -v ${HOME}/outputs1:/outputs \
+              bids/${CIRCLE_PROJECT_REPONAME,,} /bids_dataset /outputs participant --participant_label 01
         no_output_timeout: 6h
 
   deploy:
