--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,12 +54,14 @@ jobs:
     - run: docker load -i /tmp/workspace/docker/image.tar
 
     - run:
+        name: print version
         command: |
           docker run -ti --rm --read-only
             -v /tmp/workspace/data/ds114_test1_with_freesurfer:/bids_dataset \
             -v ${HOME}/outputs1:/outputs \
               bids/${CIRCLE_PROJECT_REPONAME,,} --version
     - run:
+        name: run participant 1
         command: |
           docker run -ti --rm --read-only
             -v /tmp/workspace/data/ds114_test1_with_freesurfer:/bids_dataset \
