--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,14 +56,14 @@ jobs:
     - run:
         name: print version
         command: |
-          docker run -ti --rm --read-only
+          docker run -ti --rm --read-only \
             -v /tmp/workspace/data/ds114_test1_with_freesurfer:/bids_dataset \
             -v ${HOME}/outputs1:/outputs \
               bids/${CIRCLE_PROJECT_REPONAME,,} --version
     - run:
         name: run participant 1
         command: |
-          docker run -ti --rm --read-only
+          docker run -ti --rm --read-only \
             -v /tmp/workspace/data/ds114_test1_with_freesurfer:/bids_dataset \
             -v ${HOME}/outputs1:/outputs \
               bids/${CIRCLE_PROJECT_REPONAME,,} /bids_dataset /outputs participant --participant_label 01
