--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,13 +25,8 @@ jobs:
     - run:
         name: Build Docker image
         command: |
-          if [[ -e ${HOME}/docker/image.tar ]]; \
-            then docker load -i ${HOME}/docker/image.tar;
-          fi
-          git describe --tags --always > version
-          docker build -t bids/${CIRCLE_PROJECT_REPONAME,,} .
-          mkdir -p ${HOME}/docker
-          docker save "bids/${CIRCLE_PROJECT_REPONAME,,}" > ${HOME}/docker/image.tar
+          wget https://raw.githubusercontent.com/bids-apps/maintenance-tools/main/circleci/build_docker.sh
+          bash build_docker.sh 
 
     - save_cache:
         key: my_cache
@@ -75,18 +70,12 @@ jobs:
     steps:
     - attach_workspace:
         at: /tmp/workspace
-    - run: docker load -i /tmp/workspace/docker/image.tar
-
+    - run: docker load -i /tmp/workspace/image.tar
     - run:
+        name: push to dockerhub
         command: |
-          if [[ -n "$DOCKER_PASS" ]]; then
-            echo "${DOCKER_PASS}" | docker login -u ${DOCKER_USER} --password-stdin && \
-            docker push bids/${CIRCLE_PROJECT_REPONAME}:latest
-            if [[ -n "${CIRCLE_TAG}" ]]; then
-              docker tag bids/${CIRCLE_PROJECT_REPONAME} bids/${CIRCLE_PROJECT_REPONAME}:$CIRCLE_TAG
-              docker push bids/${CIRCLE_PROJECT_REPONAME}:$CIRCLE_TAG;
-            fi
-          fi
+          wget https://raw.githubusercontent.com/bids-apps/maintenance-tools/main/circleci/push_docker.sh
+          bash push_docker.sh  
 
 workflows:
   build-test-deploy:
