--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,16 +12,11 @@ jobs:
     - restore_cache:
         keys:
         - my_cache
-
     - run:
-        name: Get ds114_test1_with_freesurfer from OSF
+        name: Get test data
         command: |
-          mkdir -p ${HOME}/data;
-          if [[ ! -d ${HOME}/data/ds114_test1_with_freesurfer ]]; then
-            wget -c -O ${HOME}/ds114_test1_with_freesurfer.tar.gz "https://osf.io/download/y4q8a/"
-            tar xfz ${HOME}/ds114_test1_with_freesurfer.tar.gz -C ${HOME}/data
-            ls -la
-          fi
+          wget https://raw.githubusercontent.com/bids-apps/maintenance-tools/main/utils/get_data_from_osf.sh
+          bash get_data_from_osf.sh ds114_test1_with_freesurfer  
     - run:
         name: Build Docker image
         command: |
@@ -90,3 +85,5 @@ workflows:
         filters:
           tags:
             only: /.*/
+
+# VS Code Extension Version: 1.5.1
