--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,6 +80,8 @@ workflows:
         requires:
         - build
     - deploy:
+        context:
+        - dockerhub
         requires:
         - test
         filters:
