--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,16 +47,15 @@ jobs:
         name: print version
         command: |
           docker run -ti --rm --read-only \
-            -v /tmp/workspace/data/ds114_test1_with_freesurfer:/bids_dataset \
-            -v ${HOME}/outputs1:/outputs \
+            -v /tmp/workspace/data/ds114_test1_with_freesurfer:/home/jovyan/work/data \
               bids/${CIRCLE_PROJECT_REPONAME,,} --version
     - run:
         name: run participant 1
         command: |
           docker run -ti --rm --read-only \
-            -v /tmp/workspace/data/ds114_test1_with_freesurfer:/bids_dataset \
+            -v /tmp/workspace/data/ds114_test1_with_freesurfer:/home/jovyan/work/data \
             -v ${HOME}/outputs1:/outputs \
-              bids/${CIRCLE_PROJECT_REPONAME,,} /bids_dataset /outputs participant --participant_label 01
+              bids/${CIRCLE_PROJECT_REPONAME,,} /home/jovyan/work/data /home/jovyan/work/data/derivatives participant --participant_label 01
         no_output_timeout: 6h
 
   deploy:
